# grandmas_password_generator

./: CMakeLists.txt  README.md  dictionary.cpp  dictionary.h  distance.cpp  distance.h  main.cpp  password_generator.cpp  password_generator.h  words_and_costs_table.cpp  words_and_costs_table.h
examples/: words.txt
src/: CMakeLists.txt  distance.cpp  distance.h  main.cpp  password_generator.h  words_and_costs_table.cpp
